@@ -1,3 +1,9 @@
+Fri Jan 23 14:19:28 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>
+
+	* object.c (mod_to_s): need to duplicate classpath.
+
+	* error.c (exc_inspect): need to duplicate classpath.
+
 Thu Jan 22 00:37:47 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>
 
 	* ruby.h (STR2CSTR): new macro to retrieve char*.
